Fri Oct  2 11:05:10 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled some tests for ce/labview/fuzz

        * tests/TransportCurrent/Framework/run_test.pl:
        * tests/TransportCurrent/IIOP/run_test.pl:
          Converted to the new test framework

Fri Oct  2 09:12:20 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled Bug_3154_Regression for ce/labview/fuzz

        * tests/HandleExhaustion/run_test.pl:
        * tests/OBV/Collocated/Forward/run_test.pl:
        * tests/OBV/TC_Alignment/run_test.pl:
          Converted to the new test framework

Fri Oct  2 08:35:27 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2735_Regression/run_test.pl:
        * tests/Bug_3154_Regression/run_test.pl:
          Resolved some fuzz errors/warnings.

Fri Oct  2 07:11:45 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/StringSeqE.idl:
        * tao/StringSeqEC.h:
          Removed, not needed anymore with the new -Glem behaviour

Thu Oct  1 19:24:45 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled Bug_3154_Regression for ce/labview/fuzz

        * tests/Bug_3154_Regression/run_test.pl:
          Converted to the new test framework

Thu Oct  1 19:00:33 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3276_Regression/run_test.pl:
          Resolved a fuzz warning and a few script errors

Thu Oct  1 18:47:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2935_Regression/run_test.pl:
          Resolved some fuzz errors.

Thu Oct  1 17:59:12 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_exs.cpp:
        * TAO_IDL/be/be_visitor_component/component_svh.cpp:
        * TAO_IDL/be/be_visitor_component/component_svs.cpp:

          Eliminated duplicate output streams.

Thu Oct  1 14:36:42 UTC 2009  Marcel Smit  <msmit@remedy.nl>
