@@ -6,80 +6,77 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
 
 $status = 0;
-$iorfile = PerlACE::LocalFile ("server.ior");
+my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
+my $client = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
 
-unlink $iorfile;
+my $iorbase = "server.ior";
+my $server_iorfile = $server->LocalFile ($iorbase);
+my $client_iorfile = $client->LocalFile ($iorbase);
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("server");
-}
-else {
-    $SV = new PerlACE::Process ("server");
-}
-$CL = new PerlACE::Process ("client", " -k file://$iorfile");
+$SV = $server->CreateProcess ("server");
+$CL = $client->CreateProcess ("client", " -k file://$client_iorfile");
 
 $SV->Spawn ();
 
-if (PerlACE::waitforfile_timed ($iorfile,
-                        $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$iorfile>\n";
+if ($server->WaitForFileTimed ($iorbase,
+                               $server->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
-} 
+}
 
-$client = $CL->SpawnWaitKill (300);
+$client_status = $CL->SpawnWaitKill (2*$client->ProcessStartWaitInterval ());
 
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
+if ($client_status != 0) {
+    print STDERR "ERROR: client returned $client_status\n";
     $status = 1;
 }
 
-$server = $SV->WaitKill (25);
+$server_status = $SV->WaitKill ($server->ProcessStopWaitInterval ());
 
-if ($server != 0) {
-    print STDERR "ERROR: server returned $server\n";
+if ($server_status != 0) {
+    print STDERR "ERROR: server returned $server_status\n";
     $status = 1;
 }
 
-unlink $iorfile;
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
 ################################
 print STDERR "===== Client with RW handler\n";
-if (PerlACE::is_vxworks_test()) {
-    $SV1 = new PerlACE::ProcessVX ("server");
-}
-else {
-    $SV1 = new PerlACE::Process ("server");
-}
-$CL1 = new PerlACE::Process ("client", 
-                             " -ORBSvcConf client.conf");
 
-$SV1->Spawn ();
+$SV2 = $server->CreateProcess ("server");
+$CL2 = $client->CreateProcess ("client", " -ORBSvcConf client.conf");
 
-if (PerlACE::waitforfile_timed ($iorfile,
-                        $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$iorfile>\n";
-    $SV->Kill (); $SV->TimedWait (1);
+$SV2->Spawn ();
+
+if ($server->WaitForFileTimed ($iorbase,
+                               $server->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
+    $SV2->Kill (); $SV2->TimedWait (1);
     exit 1;
-} 
+}
 
-$client1 = $CL1->SpawnWaitKill (300);
+$client_status = $CL2->SpawnWaitKill (2*$client->ProcessStartWaitInterval ());
 
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
+if ($client_status != 0) {
+    print STDERR "ERROR: client 2 returned $client_status\n";
     $status = 1;
 }
 
-$server1 = $SV1->WaitKill (25);
+$server_status = $SV2->WaitKill ($server->ProcessStopWaitInterval ());
 
-if ($server1 != 0) {
-    print STDERR "ERROR: server returned $server\n";
+if ($server_status != 0) {
+    print STDERR "ERROR: server 2 returned $server_status\n";
     $status = 1;
 }
 
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
-unlink $iorfile;
 exit $status;
